src/components/MapViewer/css/ArcgisMap.css
/* ... */
.map-menu-dropdown
  .ccl-expandable__button[aria-expanded='true']
  .dropdown-icon {
  transform: rotate(90deg);
}

.map-menu-dropdown .ccl-expandable__button::after {
  margin-right: 0;
  color: black;
}

.map-menu-dropdown .ccl-expandable__button:hover::after {
  color: black;
}

.map-menu-dropdown .ccl-expandable__button[aria-expanded='false'] + * {
  display: none;
}

.map-menu-dropdown .ccl-expandable__button[aria-expanded='true'] + * {
  display: block;
}

.map-menu-dropdown > .ccl-expandable__button {
  margin-bottom: 0;
}

.map-menu-product-dropdown .ccl-expandable__button {
  margin-top: 0;
}

.map-menu-dropdown .map-menu-products-container {
  padding-right: 0 !important;
  background-color: white;
}

.map-menu-dropdown .ccl-form .ccl-form-group {
  display: flex;
  margin-top: 0;
}

.map-menu-dropdown .map-menu-dataset {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-bottom: 0.5rem;
}

.map-menu-family-dataset-dropdown {
  padding-left: 2rem;
}

.map-menu-family-dropdown {
  padding-left: 2rem;
}

.map-menu-dataset > div:first-of-type {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.map-menu .map-menu-layers-container {
  width: 100%;
}

.map-menu-layer:hover {
  background-color: #dadada40;
}

.land .map-menu-layer {
  border-bottom: 1px solid rgba(160, 177, 40, 0.2) !important;
}

.map-menu-icons {
  display: inline-block;
  white-space: nowrap;
}

.map-menu-icon {
  margin-left: 0.5rem;
  color: black;
  cursor: pointer;
  font-size: 1rem;
  text-decoration: none;
}

.land .map-menu-icon.map-menu-service-icon {
  margin-left: 1.75rem;
}

#map-menu-services .map-menu-icon.map-menu-service-icon {
  margin-left: auto;
}

.map-menu-dropdown i:hover {
  color: black;
}

#active_panel {
  height: 100%;
}

#active_panel .no-active-datasets {
  display: block;
  margin: 1rem;
}

#active_panel .active-layer + .no-active-datasets {
  display: none;
}

#active_panel #active_layers {
  display: flex;
  height: 100%;
  flex-direction: column;
}

#map_remove_layers {
  margin-top: auto;
}

#map_remove_layers svg {
  margin-right: 0.5rem;
}

.active-layer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
  border-bottom: solid 1px #dadada;
}

.active-layer:hover {
  background: #dadada40;
  cursor: move;
}

.active-layer-name {
  word-break: break-word;
}

.locked {
  cursor: auto;
  opacity: 0.3;
  pointer-events: none;
}

.active-layer-options {
  white-space: nowrap;
}

.active-layer-options i {
  margin: 0;
  color: black;
  cursor: pointer;
  font-size: 1rem;
}

.active-layer-options i:hover {
  color: black;
}

.active-layer-options > span {
  margin-left: 1rem;
}

#nolayers_message {
  padding: 1rem;
}

/* Download area */
.map-download-area-container {
  position: relative;
}

.map-download-block {
  position: absolute;
  top: 0;
  left: 0;
  width: 30%;
  min-width: 350px;
  max-width: 500px;
  padding: 1.5rem;
  margin-top: 15px;
  margin-left: 15px;
  background-color: white;
}

.map-download-title {
  margin-bottom: 1.5rem;
  font-size: 1.25rem;
}

.map-download-area,
.map-download-resource {
  margin: 1.5rem 0;
}

.map-download-header {
  display: flex;
  align-items: center;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.map-download-resource select {
  cursor: pointer;
}

.map-download-area .ccl-form-legend + .ccl-form-group {
  margin-top: 0.5rem;
}

.map-download-buttons {
  display: flex;
  justify-content: center;
  margin: 0 1rem;
}

.map-download-block .ccl-form-group:not(:first-of-type) {
  margin-top: 0.5rem;
}

#download_panel .area-panel {
  width: 100%;
  height: 100%;
  font-size: 0.9rem;
}

.ui.floating.message {
  position: absolute;
  z-index: 1;
  left: 0;
  width: calc(100% - 2rem);
  margin: 0;
}

/* Legend*/
.legend-container {
  display: flex;
  box-shadow: none !important;
}

.legend-panel.esri-legend.esri-widget {
  overflow: visible;
}

.esri-legend .esri-legend__service,
.esri-legend .esri-legend__message {
  padding: 0 !important;
  margin-bottom: 1rem;
}

.esri-legend .esri-legend__service {
  border-bottom: solid 1px #dadada;
}

.esri-legend .esri-legend__layer {
  margin: 0;
}

/* Info widget */
.info-container {
  display: none;
  box-shadow: none !important;
}

.info-panel-buttons {
  display: flex;
  justify-content: space-between;
}

.info-panel-buttons button {
  padding: 0.5rem 1rem;
  margin-bottom: 1rem;
  font-size: 0.875rem;
}

.info-panel-buttons .info-button-left svg {
  margin-right: 0.25rem;
}

.info-panel-buttons .info-button-right svg {
  margin-left: 0.25rem;
}

.info-panel-buttons button svg {
  color: inherit;
}

.info-panel-title {
  display: block;
  margin-bottom: 1rem;
  font-weight: bold;
  word-break: break-word;
}

.info-panel select {
  margin-bottom: 1rem;
}

.info-table {
  width: 100%;
  margin-bottom: 1rem;
  table-layout: fixed;
}

.info-table td {
  width: 50%;
  padding: 1rem 0.75rem;
  font-size: 0.875rem;
  vertical-align: top;
  word-break: break-word;
}

.info-table tr:nth-child(even) {
  background-color: #ebebeb33;
}

.info-table tr:nth-child(odd) {
  background-color: #ebebeb;
}

.info-statistics-panel {
  margin-bottom: 1rem;
}

/* Time slider*/
.esri-ui-bottom-right.esri-ui-corner {
  width: 100%;
  height: 100%;
}

.timeslider-container {
  position: absolute;
  z-index: 1;
  margin-left: 0 !important;
}

.timeslider-container .timeslider-panel {
  cursor: move;
}

#slide_frame {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 100%;
  visibility: hidden;
}

#timeslider_close {
  position: absolute;
  top: 0;
  right: 0;
  display: none;
  margin: 0.5rem;
  color: #a0b128;
  cursor: pointer;
}

.timeslider-panel + #timeslider_close {
  display: block;
}

.esri-time-slider__time-extent-date {
  margin: 0.5rem 0;
  color: #a0b128 !important;
  font-weight: bold !important;
}
/* ... */

